--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
 	id "com.github.jk1.dependency-license-report" version "2.0"
 }
 
+licenseReport {
+    renderers = [new com.github.jk1.license.render.CsvReportRenderer()]
+    outputDir = "$buildDir/reports/dependency-license"
+}
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
